多光源代码学习

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,5 +52,6 @@
         "shader": "cpp",
         "list": "cpp",
         "map": "cpp"
-    }
+    },
+    "cmake.sourceDirectory": "${workspaceFolder}/include/glm"
 }
