--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,13 @@ Pos=874,11
 Size=330,108
 Collapsed=0
 
+[Window][修改第4个box颜色]
+Pos=1136,299
+Size=117,77
+Collapsed=0
+
+[Window][forth box color]
+Pos=17,4
+Size=348,134
+Collapsed=0
+
