--- a/imgui.ini
+++ b/imgui.ini
@@ -3,23 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Hello, world!]
-Pos=874,11
-Size=330,108
+[Window][rock amount]
+Pos=60,60
+Size=117,54
 Collapsed=0
-
-[Window][修改第4个box颜色]
-Pos=1136,299
-Size=117,77
-Collapsed=0
-
-[Window][forth box color]
-Pos=17,4
-Size=348,134
-Collapsed=0
-
-[Window][box color]
-Pos=335,6
-Size=480,130
-Collapsed=1
 
