--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Debug",
+            "name": "DebugBuild",
             "type": "cppdbg",
             "request": "launch",
             "args": [],
@@ -16,6 +16,22 @@
                 "program": "${workspaceFolder}/output/main.exe"
             },
             "preLaunchTask": "build"
-        }
+        },
+        {
+            "name": "Clean",
+            "type": "cppdbg",
+            "request": "launch",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "windows": {
+                "MIMode": "gdb",
+                "miDebuggerPath": "gdb.exe",
+                "program": "${workspaceFolder}/output/main.exe"
+            },
+            "preLaunchTask": "clean"
+        },
     ]
 }
